# filter

./: .env.example  .gitignore  .pre-commit-config.yaml  1_Kurulum_Yap.bat  2_Akilli_Filtre.bat  3_Agac_Olustur.bat  4_Agac_Takip.bat  5_Kapasite_Analizi.bat  6_Excel_Birlestir.bat  7_Oncelik_Guncelle.bat  8_Stok_Rezerve.bat  9_Paneli_Baslat.bat  Makefile  oncelik_sirasi.txt  pyproject.toml
.agent/workflows/: ctx.md  done.md  setup-project-v4.md
Documentation/: CLEAN_CODE_ARCHITECTURE.md  KNOWLEDGE_BASE.md  Kullanici_El_Kitabi.md  MILESTONE_CHECKLISTS.md  PRODUCT_SPEC_OR_GDD.md  PROJECT_OVERVIEW.md  PYTHON_PROJECT_SETUP.md  TECHNICAL_DESIGN_DOC.md  TESTING_STRATEGY.md  VERSION_CONTROL_SETUP.md  proje_analizi.md
dashboard/: app.js  index.html  styles.css
src/recipe_automation/: __init__.py  analysis.py  excel_merger.py  main.py  watch_excel.py
src/recipe_automation/core/: config.py
src/recipe_automation/services/: bom_tree.py  filters.py  matcher.py  scanner.py  sorter.py
src/recipe_automation/utils/: excel_io.py  stock_reserver.py  update_priority.py
src/recipe_automation/web/: template.html
tests/: test_bom_tree.py  test_hammadde_matching.py  test_main.py  test_stock_reserver.py
veritabanlari/: haric_tutulacak_parcalar.json  istasyon_gruplari.json  kapasite_ayarlari.json  oncelik_sirasi.json  operasyon_gecmisi.txt  operasyon_gruplari.json
